<resources>
  <string name="common_minutes_ago">%s minutes ago</string>
  <string name="common_hours_ago">%s hours ago</string>
  <string name="common_days_ago">%s days ago</string>
  <string name="app_name">Browser</string>
  <string name="app_settings">Settings</string>
  <string name="urltitlebar_gotourl">GO</string>
  <string name="urltitlebar_hint">Search or type in a URL</string>
  <string name="search_description">Bookmarks, History, Google suggestions</string>
  <string name="browser_addnewtab">New Tab</string>
  <string name="bookmark_title">Name</string>
  <string name="bookmark_url">URL</string>
  <string name="bookmark_folder">Folder</string>
  <string name="bookmark_folderpicker_header">Choose folder</string>
  <string name="night_mode_desc">Forces anti-color effect on websites</string>
  <string name="menu_brightness_adjust">Brightness</string>
  <string name="save">OK</string>
  <string name="back">Back</string>
  <string name="ok">OK</string>
  <string name="cancel">Cancel</string>
  <string name="close">Close</string>
  <string name="go">GO</string>
  <string name="search">Find</string>
  <string name="clear">Clear</string>
  <string name="feedback">Feedback</string>
  <string name="exit">Exit</string>
  <string name="do_not_save">Cancel</string>
  <string name="bookmark_windowtitle_add">New bookmark</string>
  <string name="bookmark_shortcut_already_exists">This bookmark already exists!</string>
  <string name="bookmark_saved">Your bookmark has been saved</string>
  <string name="bookmark_needs_title">Please enter a name</string>
  <string name="bookmark_url_not_valid">Please enter a valid URL</string>
  <string name="bookmark_cannot_save_url">This URL cannot be bookmarked</string>
  <string name="added_to_bookmarks">Your bookmark has been saved</string>
  <string name="removed_from_bookmarks">Your bookmark has been removed</string>
  <string name="search_the_web">Search the web</string>
  <string name="baidu_search_label">Baidu search</string>
  <string name="baidu_search_suggest_label">Baidu search:</string>
  <string name="google_search_suggest_label">Google search:</string>
  <string name="bing_search_suggest_label">Bing search:</string>
  <string name="yahoo_search_suggest_label">Yahoo search:</string>
  <string name="Bookmark_favorite">Bookmarks</string>
  <string name="Bookmark_history">History</string>
  <string name="Bookmark_most_visited">Favorites</string>
  <string name="system_folder_one_click_launcher">Quick access</string>
  <string name="menu_fav">Bookmarks</string>
  <string name="app_confirm_exit">You sure you want to exit?</string>
  <string name="app_clear_cache">Clear Cache</string>
  <string name="bookmark_add_folder">New folder</string>
  <string name="bookmark_folder_exist">This folder already exists!</string>
  <string name="added_bookmark_folder">Bookmark added</string>
  <string name="open_link_background">Opened link in background</string>
  <string name="reading_title">Read:</string>
  <string name="bookmark_header_title">Operation</string>
  <string name="bookmark_delete">Delete</string>
  <string name="bookmark_edit">Edit</string>
  <string name="bookmark_folder_deleted">Folder successfully deleted</string>
  <string name="bookmark_default_folder">Default</string>
  <string name="edit_bookmarkfolder_header">Edit folder</string>
  <string name="bookmark_folder_need_title">Please enter folder name!</string>
  <string name="pref_wap_support">WAP support</string>
  <string name="pref_content_title">Web page</string>
  <string name="pref_content_load_images">Load images</string>
  <string name="pref_content_volume_setting">Volume button Setting</string>
  <string name="pref_content_volume_enable">Enable volume button option</string>
  <string name="pref_content_block_popups">Block pop-ups</string>
  <string name="pref_operation_title">Gesture and operation</string>
  <string name="pref_enter_reading_mode">Reading mode</string>
  <string name="pref_enter_forum_mode">Forum mode</string>
  <string name="http">http://</string>
  <string name="pref_content_plugins">Display flash content</string>
  <string name="pref_content_homepage">Homepage</string>
  <string name="pref_privacy_clear_cache">Clear cache</string>
  <string name="pref_privacy_clear_cache_summary">Clear locally cached page content</string>
  <string name="pref_privacy_clear_cache_dlg">This will delete the stored content in the local caches and databases</string>
  <string name="pref_privacy_clear_cookies">Clear cookies</string>
  <string name="pref_privacy_clear_cookies_summary">Clear all browser cookies</string>
  <string name="pref_privacy_clear_cookies_dlg">This will delete all the cookies</string>
  <string name="pref_privacy_clear_history">Clear history</string>
  <string name="pref_homepage_use_current">Current page</string>
  <string name="pref_homepage_use_default">Restore defaults</string>
  <string name="pref_privacy_clear_history_summary">Clear your browser navigation history</string>
  <string name="pref_privacy_clear_history_dlg">This will delete the browser navigation history</string>
  <string name="pref_privacy_clear_form_data">Clear form data</string>
  <string name="pref_privacy_clear_form_data_summary">Clear all saved form data</string>
  <string name="pref_privacy_clear_form_data_dlg">This will delete all saved form data</string>
  <string name="pref_privacy_clear_passwords">Clear saved password</string>
  <string name="pref_privacy_clear_passwords_summary">Clear all saved passwords</string>
  <string name="pref_privacy_clear_passwords_dlg">This will delete all saved passwords</string>
  <string name="pref_privacy_enable_geolocation">Enable Geolocation</string>
  <string name="pref_privacy_enable_geolocation_summary">Allow web sites to access your location information</string>
  <string name="pref_privacy_clear_geolocation_access">Disable Geolocation</string>
  <string name="pref_privacy_clear_geolocation_access_summary">Disallow web sites to access your location information</string>
  <string name="pref_privacy_clear_geolocation_access_dlg">Web sites will no longer access your location information</string>
  <string name="pref_security_title">Privacy and Security</string>
  <string name="pref_security_remember_passwords">Remember passwords</string>
  <string name="pref_security_remember_passwords_summary">Save usernames and passwords</string>
  <string name="pref_security_save_form_data">Save form data</string>
  <string name="pref_security_save_form_data_summary">Saves form data for later use</string>
  <string name="pref_reset_default">Reset default settings</string>
  <string name="pref_reset_default_dlg">Settings will reverted to the default values</string>
  <string name="pref_reset_default_dlg_title">Reset default settings</string>
  <string name="pref_text_size">Text size</string>
  <string name="pref_overview_mode">Panorama Mode</string>
  <string name="pref_overview_mode_summary">Display web pages in panoramic mode</string>
  <string name="pref_auto_enter_fullscreen">Smart full-screen</string>
  <string name="pref_auto_enter_fullscreen_summary">Switch full screen mode on / off</string>
  <string name="pref_text_size_dialogtitle">Text size</string>
  <string name="pref_about">About MIUI Browser</string>
  <string name="pref_about_detail">MIUI Browser</string>
  <string name="pref_about_message2">Copyright 漏 2011 miui.com</string>
  <string name="pref_about_message3">All rights reserved</string>
  <string name="pref_always_show_tabbar">Always show tabs</string>
  <string name="pref_always_show_tabbar_summary">For easy window switching</string>
  <string name="pref_show_tabbar_in_loading">Show tabs when loading</string>
  <string name="pref_hide_buttons_in_fullscreen">Floating Buttons</string>
  <string name="pref_simple_mode">Bandwidth saving mode</string>
  <string name="pref_hide_status_bar_always">Status bar</string>
  <string name="pre_set_full_screen">Full-screen control</string>
  <string name="pre_set_date_management">Browser data</string>
  <string name="forum_post_empty">Content cannot be empty!</string>
  <string name="download_action_start">Start download</string>
  <string name="menu_settings">Settings</string>
  <string name="menu_select_text">Select text</string>
  <string name="toast_select_text">Select the text to be copied</string>
  <string name="menu_night_mode_on">Night mode</string>
  <string name="reading_enter_reading_mode">You have entered reading mode</string>
  <string name="reading_leave_reading_mode">You have quit reading mode</string>
  <string name="reading_data_not_available">Reading the current page mode is not available, exit the reading mode</string>
  <string name="download_no_sdcard_dlg_title">SD card not found</string>
  <string name="download_no_sdcard_dlg_msg">SD card must be mounted before you can download %s</string>
  <string name="download_sdcard_busy_dlg_title">SD card busy</string>
  <string name="download_sdcard_busy_dlg_msg">SD card is busy, please unmount the SD card and try again</string>
  <string name="top_search_google">Google</string>
  <string name="top_search_baidu">Baidu</string>
  <string name="top_search_bing">Bing</string>
  <string name="top_search_yahoo">Yahoo!</string>
  <string name="top_search">Search</string>
  <string name="top_url">www.</string>
  <string name="contextmenu_openlink">Open in same window</string>
  <string name="contextmenu_openlink_newwindow">Open in new window</string>
  <string name="contextmenu_openlink_background">Open in background</string>
  <string name="contextmenu_bookmark_thislink">Add to bookmarks</string>
  <string name="search_engine_selection_title">Select your favorite search engine:</string>
  <string name="menu_homepage">Home</string>
  <string name="menu_download">Downloads</string>
  <string name="menu_setting">Settings</string>
  <string name="menu_exit">Exit</string>
  <string name="menu_share_page">Share</string>
  <string name="auto_data_backup">Automatic backup</string>
  <string name="auto_data_backup_summary">Automatic browser data backup</string>
  <string name="one_key_export">One Key Backup</string>
  <string name="one_key_export_summary">Backup browser data to the SD card</string>
  <string name="one_key_export_message">This will back up the browser data to SD card in \\sdcard\\miui_browser\\backups</string>
  <string name="one_key_import">One key import</string>
  <string name="one_key_import_summary">Import browser data from the SD card</string>
  <string name="one_key_import_message">This will import the data backup</string>
  <string name="pref_default_text_encoding">Encoding</string>
  <string name="pref_default_text_encoding_dialogtitle">Encoding</string>
  <string name="pref_default_zoom">Page zoom Settings</string>
  <string name="pref_default_zoom_dialogtitle">Page zoom Settings</string>
  <string name="pref_user_agent">User agent</string>
  <string name="pre_auto_clean_cache_title">Clear cache on exit</string>
  <string name="pre_auto_clean_cache_summary">Automatically clears cache when exiting the browser</string>
  <string name="pre_exit_confirmation">Exit confirmation</string>
  <string name="pre_exit_confirmation_summary">Confirm before exit</string>
  <string name="pref_about_message_credit">Special thanks: jpsiemer@XDA</string>
  <string name="auto_brightness">Auto brightness</string>
  <string name="menu_search">Find on page</string>
  <string name="pref_single_click">Single click action</string>
  <string name="pref_long_click">Long click action</string>
  <string name="bookmark_menu_sort_by_default">Sort default</string>
  <string name="bookmark_menu_sort_by_name">Sort by name</string>
  <string name="bookmark_menu_add_folder">Create folder</string>
  <string name="bookmark_menu_add_favorite">Add to favorites</string>
  <string name="bookmark_menu_import_favorites">Import favorites</string>
  <string name="bookmark_menu_export_favorites">Export favorites</string>
</resources>