<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" android:title="@string/menu_settings">
  <PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" android:title="@string/pref_content_title" android:key="pre_scan_set">
    <ListPreference android:entries="@array/pref_text_size_choices" android:title="@string/pref_text_size" android:key="text_size" android:defaultValue="NORMAL" android:dialogTitle="@string/pref_text_size_dialogtitle" android:entryValues="@array/pref_text_size_values"/>
    <ListPreference android:entries="@array/pref_load_images_choice" android:title="@string/pref_content_load_images" android:key="load_images_option" android:defaultValue="ON" android:dialogTitle="@string/pref_content_load_images" android:entryValues="@array/pref_load_images_choice_value"/>
    <ListPreference android:entries="@array/pref_content_plugins_choices" android:title="@string/pref_content_plugins" android:key="plugin_support" android:defaultValue="ON_DEMAND" android:dialogTitle="@string/pref_content_plugins" android:entryValues="@array/pref_content_plugins_values"/>
    <CheckBoxPreference android:title="@string/pref_wap_support" android:key="pref_wap_support"/>
    <ListPreference android:entries="@array/pref_user_agent_choices" android:title="@string/pref_user_agent" android:key="user_agent" android:defaultValue="DEFAULT" android:dialogTitle="@string/pref_user_agent" android:entryValues="@array/pref_user_agent_choices_values"/>
    <ListPreference android:entries="@array/pref_default_text_encoding_choices" android:title="@string/pref_default_text_encoding" android:key="default_text_encoding" android:defaultValue="UTF-8" android:dialogTitle="@string/pref_default_text_encoding_dialogtitle" android:entryValues="@array/pref_default_text_encoding_values"/>
    <ListPreference android:entries="@array/pref_default_zoom_choices" android:title="@string/pref_default_zoom" android:key="default_zoom" android:defaultValue="MEDIUM" android:dialogTitle="@string/pref_default_zoom_dialogtitle" android:entryValues="@array/pref_web_default_zoom_values"/>
    <ListPreference android:entries="@array/pref_reading_mode_choices" android:title="@string/pref_enter_reading_mode" android:key="reading_mode" android:defaultValue="MANU" android:dialogTitle="@string/pref_enter_reading_mode" android:entryValues="@array/pref_reading_mode_values"/>
    <ListPreference android:entries="@array/pref_forum_mode_choices" android:title="@string/pref_enter_forum_mode" android:key="forum_mode" android:defaultValue="MANU" android:dialogTitle="@string/pref_enter_forum_mode" android:entryValues="@array/pref_forum_mode_values"/>
    <CheckBoxPreference android:title="@string/pref_content_block_popups" android:key="block_popup_windows" android:defaultValue="true"/>
    <CheckBoxPreference android:title="@string/pre_exit_confirmation" android:key="pref_exit_confirmation" android:summary="@string/pre_exit_confirmation_summary" android:defaultValue="false"/>
    <com.android.browser.ui.BrowserHomepagePreference android:hint="@string/http" android:title="@string/pref_content_homepage" android:key="homepage" android:inputType="textMultiLine|textUri"/>
  </PreferenceScreen>
  <PreferenceScreen android:title="@string/pref_operation_title">
    <ListPreference android:entries="@array/pref_volume_setting_choice" android:title="@string/pref_content_volume_setting" android:key="volume_setting_option" android:defaultValue="SCROLL_PAGE" android:dialogTitle="@string/pref_content_volume_setting" android:entryValues="@array/pref_volume_setting_choice_value"/>
    <ListPreference android:entries="@array/pref_volume_setting_enable_choice" android:title="@string/pref_content_volume_enable" android:key="apply_volume_setting_option" android:defaultValue="ONLY_NO_MUSIC" android:dialogTitle="@string/pref_content_volume_enable" android:entryValues="@array/pref_volume_setting_enable_choice_value"/>
    <ListPreference android:entries="@array/pref_single_click_choices" android:title="@string/pref_single_click" android:key="single_click_action" android:defaultValue="DEFAULT" android:dialogTitle="@string/pref_single_click" android:entryValues="@array/pref_link_choices_values"/>
    <ListPreference android:entries="@array/pref_long_click_choices" android:title="@string/pref_long_click" android:key="long_click_action" android:defaultValue="DEFAULT" android:dialogTitle="@string/pref_long_click" android:entryValues="@array/pref_link_choices_values"/>
  </PreferenceScreen>
  <PreferenceScreen android:title="@string/pref_security_title">
    <com.android.browser.ui.BrowserYesNoPreference android:title="@string/pref_privacy_clear_cache" android:key="privacy_clear_cache" android:summary="@string/pref_privacy_clear_cache_summary" android:dialogTitle="@string/clear" android:dialogMessage="@string/pref_privacy_clear_cache_dlg" android:dialogIcon="@*android:drawable/ic_dialog_alert_big"/>
    <com.android.browser.ui.BrowserYesNoPreference android:title="@string/pref_privacy_clear_history" android:key="privacy_clear_history" android:summary="@string/pref_privacy_clear_history_summary" android:dialogTitle="@string/clear" android:dialogMessage="@string/pref_privacy_clear_history_dlg" android:dialogIcon="@*android:drawable/ic_dialog_alert_big"/>
    <com.android.browser.ui.BrowserYesNoPreference android:title="@string/pref_privacy_clear_cookies" android:key="privacy_clear_cookies" android:summary="@string/pref_privacy_clear_cookies_summary" android:dialogTitle="@string/clear" android:dialogMessage="@string/pref_privacy_clear_cookies_dlg" android:dialogIcon="@*android:drawable/ic_dialog_alert_big"/>
    <CheckBoxPreference android:title="@string/pre_auto_clean_cache_title" android:key="pref_auto_clear_cache" android:summary="@string/pre_auto_clean_cache_summary" android:defaultValue="false"/>
    <CheckBoxPreference android:title="@string/pref_security_save_form_data" android:key="save_formdata" android:summary="@string/pref_security_save_form_data_summary" android:defaultValue="true"/>
    <com.android.browser.ui.BrowserYesNoPreference android:title="@string/pref_privacy_clear_form_data" android:key="privacy_clear_form_data" android:summary="@string/pref_privacy_clear_form_data_summary" android:dialogTitle="@string/clear" android:dialogMessage="@string/pref_privacy_clear_form_data_dlg" android:dialogIcon="@*android:drawable/ic_dialog_alert_big"/>
    <CheckBoxPreference android:title="@string/pref_security_remember_passwords" android:key="remember_passwords" android:summary="@string/pref_security_remember_passwords_summary" android:defaultValue="true"/>
    <com.android.browser.ui.BrowserYesNoPreference android:title="@string/pref_privacy_clear_passwords" android:key="privacy_clear_passwords" android:summary="@string/pref_privacy_clear_passwords_summary" android:dialogTitle="@string/clear" android:dialogMessage="@string/pref_privacy_clear_passwords_dlg" android:dialogIcon="@*android:drawable/ic_dialog_alert_big"/>
    <CheckBoxPreference android:title="@string/pref_privacy_enable_geolocation" android:key="enable_geolocation" android:summary="@string/pref_privacy_enable_geolocation_summary" android:defaultValue="true"/>
    <com.android.browser.ui.BrowserYesNoPreference android:title="@string/pref_privacy_clear_geolocation_access" android:key="privacy_clear_geolocation_access" android:summary="@string/pref_privacy_clear_geolocation_access_summary" android:dependency="enable_geolocation" android:dialogTitle="@string/clear" android:dialogMessage="@string/pref_privacy_clear_geolocation_access_dlg" android:dialogIcon="@*android:drawable/ic_dialog_alert_big"/>
  </PreferenceScreen>
  <PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" android:title="@string/pre_set_date_management">
    <com.android.browser.ui.BrowserYesNoPreference android:title="@string/one_key_export" android:key="one_key_export" android:summary="@string/one_key_export_summary" android:dialogTitle="@string/one_key_export" android:dialogMessage="@string/one_key_export_message" android:dialogIcon="@*android:drawable/ic_dialog_alert_big"/>
    <com.android.browser.ui.BrowserYesNoPreference android:title="@string/one_key_import" android:key="one_key_import" android:summary="@string/one_key_import_summary" android:dialogTitle="@string/one_key_import" android:dialogMessage="@string/one_key_import_message" android:dialogIcon="@*android:drawable/ic_dialog_alert_big"/>
    <CheckBoxPreference android:title="@string/auto_data_backup" android:key="auto_data_backup" android:summary="@string/auto_data_backup_summary" android:defaultValue="true"/>
  </PreferenceScreen>
  <PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" android:title="@string/pre_set_full_screen">
    <CheckBoxPreference android:title="@string/pref_auto_enter_fullscreen" android:key="pref_auto_enter_fullscreen" android:summary="@string/pref_auto_enter_fullscreen_summary" android:defaultValue="false"/>
    <CheckBoxPreference android:title="@string/pref_always_show_tabbar" android:key="pref_always_show_tabbar" android:summary="@string/pref_always_show_tabbar_summary" android:defaultValue="false"/>
    <ListPreference android:entries="@array/pref_hide_statusbar_choices" android:title="@string/pref_hide_status_bar_always" android:key="pref_hide_status_mode" android:defaultValue="ALWAYS_SHOW" android:dialogTitle="@string/pref_hide_status_bar_always" android:entryValues="@array/pref_hide_statusbar_values"/>
  </PreferenceScreen>
</PreferenceScreen>
