<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
  <item android:icon="@*android:drawable/ic_menu_sort_by_size" android:id="@id/menu_sort_by_default" android:title="@string/bookmark_menu_sort_by_default"/>
  <item android:icon="@*android:drawable/ic_menu_sort_alphabetically" android:id="@id/menu_sort_by_name" android:title="@string/bookmark_menu_sort_by_name"/>
  <item android:icon="@drawable/ic_menu_add_folder" android:id="@id/menu_add_folder" android:title="@string/bookmark_menu_add_folder"/>
  <item android:icon="@drawable/ic_menu_add_favorite" android:id="@id/menu_add_favorite" android:title="@string/bookmark_menu_add_favorite"/>
  <item android:icon="@drawable/ic_menu_import_favorites" android:id="@id/menu_import_favorites" android:title="@string/bookmark_menu_import_favorites"/>
  <item android:icon="@drawable/ic_menu_export_favorites" android:id="@id/menu_export_favorites" android:title="@string/bookmark_menu_export_favorites"/>
</menu>
