<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content">
  <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" android:orientation="vertical" android:paddingLeft="15.0dip" android:paddingTop="15.0dip" android:paddingRight="15.0dip" android:paddingBottom="13.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_weight="1.0">
    <TextView android:textAppearance="?android:textAppearanceMedium" android:gravity="left" android:id="@id/browser_about_dialog_message1" android:layout_width="wrap_content" android:layout_height="wrap_content"/>
    <TextView android:textAppearance="?android:textAppearanceMedium" android:gravity="center" android:autoLink="web" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/pref_about_message2"/>
    <TextView android:textAppearance="?android:textAppearanceMedium" android:gravity="center" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/pref_about_message3"/>
    <TextView android:textAppearance="?android:textAppearanceMedium" android:gravity="left" android:id="@id/about_dialog_credit" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="10.0dip" android:text="@string/pref_about_message_credit"/>
  </LinearLayout>
</LinearLayout>
