<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" android:id="@id/url_search_view" android:background="@drawable/search_plate_browser" android:layout_width="fill_parent" android:layout_height="74.0px">
  <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" android:id="@id/LinearLayout_two_parts" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_marginLeft="3.0dip" android:layout_marginRight="3.0dip">
    <LinearLayout android:layout_gravity="center_vertical" android:id="@id/LinearLayoutUrl" android:background="@drawable/url_box_bg" android:layout_width="0.0dip" android:layout_height="36.0dip" android:layout_marginLeft="3.0dip" android:layout_marginRight="3.0dip" android:layout_weight="0.67">
      <TextView android:layout_gravity="center_vertical" android:id="@id/TextViewUrl" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/top_url"/>
    </LinearLayout>
    <LinearLayout android:layout_gravity="center_vertical" android:id="@id/LinearLayoutSearch" android:background="@drawable/search_box_bg" android:layout_width="0.0dip" android:layout_height="36.0dip" android:layout_marginLeft="3.0dip" android:layout_marginRight="3.0dip" android:layout_weight="0.33">
      <TextView android:ellipsize="end" android:layout_gravity="center_vertical" android:id="@id/TextViewSearch" android:paddingLeft="8.0px" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/top_search" android:singleLine="true"/>
    </LinearLayout>
  </LinearLayout>
  <LinearLayout android:gravity="center" android:layout_gravity="center_vertical" android:orientation="horizontal" android:id="@id/LinearLayout_url_search" android:layout_width="fill_parent" android:layout_height="36.0dip" android:layout_marginLeft="6.0dip" android:layout_marginRight="6.0dip">
    <com.android.browser.ui.MiRenAutoCompleteTextView android:textAppearance="?android:textAppearanceSmall" android:textSize="18.0dip" android:textColor="@color/black" android:ellipsize="end" android:gravity="left|center" android:layout_gravity="left|center" android:id="@id/search_src_text" android:layout_width="0.0dip" android:layout_height="fill_parent" android:singleLine="true" android:completionThreshold="1" android:popupBackground="@drawable/search_dropdown_background" android:layout_weight="1.0" android:inputType="textUri" android:dropDownWidth="fill_parent" android:dropDownAnchor="@id/url_search_view" android:imeOptions="actionGo" android:dropDownHeight="fill_parent" android:dropDownVerticalOffset="0.0dip"/>
    <ProgressBar android:layout_gravity="right|center" android:id="@id/search_src_suggestion_loading_progressbar" android:visibility="gone" android:layout_width="20.0dip" android:layout_height="20.0dip" android:layout_marginRight="3.0dip" style="?android:attr/progressBarStyleInverse"/>
    <ImageView android:gravity="center" android:layout_gravity="right|center" android:id="@id/title_bar_btn_go" android:paddingLeft="6.0dip" android:paddingRight="2.0dip" android:clickable="true" android:layout_width="wrap_content" android:layout_height="fill_parent" android:src="@drawable/browser_urlbar_go" android:scaleType="center"/>
    <ImageView android:gravity="center" android:layout_gravity="right|center" android:id="@id/title_bar_btn_cancel" android:paddingLeft="6.0dip" android:paddingRight="2.0dip" android:clickable="true" android:layout_width="wrap_content" android:layout_height="fill_parent" android:src="@drawable/browser_urlbar_stop" android:scaleType="center"/>
  </LinearLayout>
  <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" android:orientation="vertical" android:id="@id/search_engine_selection" android:background="@color/white" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="fill_parent">
    <TextView android:textSize="18.0dip" android:textColor="@color/black" android:gravity="center_vertical" android:background="@color/search_engine_selection_item_bg" android:paddingLeft="10.0dip" android:layout_width="fill_parent" android:layout_height="46.0dip" android:text="@string/search_engine_selection_title" android:singleLine="true"/>
    <ImageView android:id="@id/imageviewFolderDivider" android:background="@color/bookmark_background_blue" android:layout_width="fill_parent" android:layout_height="1.0dip"/>
    <ListView android:id="@id/listviewSearchEngine" android:layout_width="fill_parent" android:layout_height="fill_parent" android:cacheColorHint="@color/white" android:divider="@color/bookmark_background_blue" android:dividerHeight="1.0dip"/>
  </LinearLayout>
</LinearLayout>
